# linusb_cmake_demo

./: .clang-format  CMakeLists.txt  README.md
src/: common.h  hotplug.cpp  hotplug.h  log.h  test.cpp
